[package]
name = "owoverlay"
description = "A very simple configurable key overlay written in Rust."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Speykious <speykious+gh@speykious.dev>"]
repository = "https://github.com/Speykious/OwOverlay"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
gl = "0.14.0"
glam = "0.25.0"
glutin = "0.31.2"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.2"
rdev = { version = "0.5.3", features = ["serialize"] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
winit = { version = "0.29.7", features = ["rwh_05"] }

[dependencies.loki-draw]
git = "https://github.com/loki-chat/loki-draw"
version = "0.1.0"
rev = "bdb0404"
